Prepare IMITATOR 3.2 Cheese Blueberries

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -275,8 +275,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3.1}
-\newcommand{\imitatorversionname}{Cheese Artichoke}
+\newcommand{\imitatorversion}{3.2}
+\newcommand{\imitatorversionname}{Cheese Blueberries}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
