--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -46,6 +46,9 @@
 	version 3.1 & \includegraphics[width=.15\textwidth]{logo-3-1-300.png} & \href{https://openclipart.org/detail/291385/artichoke}{artichoke} & cactus cowboy & \publicdomain{}
 	%------------------------------------------------------------
 	\\\hline
+	version 3.2 & \includegraphics[width=.15\textwidth]{logo-3-2-300.png} & \href{https://www.publicdomainpictures.net/en/view-image.php?image=117097&picture=fresh-and-sweet-blueberries}{Fresh And Sweet Blueberries} & Kathy Zinn & \cczero{}
+	%------------------------------------------------------------
+	\\\hline
 \end{longtable}
 
 % NOTE: logos can be downloaded at https://creativecommons.org/about/downloads/
