Small improvements in user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -4074,11 +4074,11 @@ We define each of those two components below.
 
 
 \begin{remark}
-	In the parameter valuation definition (\nt{parameter\_valuation}), all parameters of the model must be given a valuation in this file; but the file may also use names that do not appear in the model (a warning will just be issued).
+	In the parameter valuation definition (\nt{parameter\_valuation}), all parameters of the model must be given a valuation; but the definition of the parameter valuation may also use names that do not appear in the model (a warning will just be issued).
 \end{remark}
 
 \begin{remark}
-	In the hyper-rectangle definition (\nt{hyper\_rectangle}), all parameters of the model must be given an interval (possibly punctual) in this file; again, the file may also use names that do not appear in the model (a warning will just be issued).
+	In the hyper-rectangle definition (\nt{hyper\_rectangle}), all parameters of the model must be given an interval (possibly punctual); again, the definition of the hyper-rectangle may also use names that do not appear in the model (a warning will just be issued).
 \end{remark}
 
 
