Translation to JANI

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2127,11 +2127,12 @@ Otherwise, if at least one rate uses a non-1 rate in the \imitator{} model, then
 \jani{} synchronization semantics is more permissive than the \imitator{} one, therefore the exact meaning can be kept.
 It is done by listing synchronization vectors in the \styleIMI{syncs} entry.
 
+\paragraph{Binary words}
+Binary words are supported by our translation to \jani{}.
+
 \paragraph{Properties}
 Properties are so far not translated to \jani{}.
 The corresponding input in the \jani{} file exists but remains empty.
-
-% TODO: binary words?
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
