--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2086,7 +2086,7 @@ In addition, the translation of properties is not supported.
 \section{Translation to \jani{}}\label{section:jani}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Since version 3.1, \imitator{} supports a translation of the model to the \href{https://jani-spec.org/}{\jani{} specification}~\cite{BDHHJT17}.
+Since version~3.1, \imitator{} supports a translation of the model to the \href{https://jani-spec.org/}{\jani{} specification}~\cite{BDHHJT17}.
 To generate an equivalent \jani{} model without performing any analysis, use:
 
 %------------------------------------------------------------
@@ -2128,7 +2128,7 @@ Otherwise, if at least one rate uses a non-1 rate in the \imitator{} model, then
 It is done by listing synchronization vectors in the \styleIMI{syncs} entry.
 
 \paragraph{Binary words}
-Binary words are supported by our translation to \jani{}.
+Binary words are somehow supported by our translation to \jani{}, but not the built-in functions.
 
 \paragraph{Properties}
 Properties are so far not translated to \jani{}.
